fixing Thank You sublink (to replace %20 with whitespace)

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -56,7 +56,8 @@
     position: absolute;
     bottom: -1.75rem;
     left: 51%;
-    transform: translateX(-50%);
+    transform: translateX(-50%);    
+    min-width: 10rem 
   }
 
   &__heading {
